After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675475 - Can't assign Ctrl+Alt+W shortcut
Can't assign Ctrl+Alt+W shortcut
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Keyboard
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-04 21:28 UTC by Kamil Páral
Modified: 2012-07-16 17:07 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Kamil Páral 2012-05-04 21:28:25 UTC
I created a custom keyboard shortcut. But I can't assign Ctrl+Alt+W combination to it. The problem is that Ctrl+W is used to close currently open "sub-panel" of control-center and return to the main hub. When I try to assign that shortcut, I'm returned to the main control-center window. I had to use dconf-editor to set it.

Fedora 17
control-center-3.4.1-1.fc17.x86_64
Comment 1 Bastien Nocera 2012-07-16 17:07:05 UTC
commit ee32c358f1f7da62f9876e38a010f72eb2323ab1
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Jul 16 18:05:04 2012 +0100

    shell: Don't handle shortcuts with excess modifiers
    
    Ctrl+Alt+W shouldn't be handled the same way as Ctrl+W.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=675475