shell: Don't handle shortcuts with excess modifiers

Ctrl+Alt+W shouldn't be handled the same way as Ctrl+W.

https://bugzilla.gnome.org/show_bug.cgi?id=675475